fixate scrollbar verticali che comparivano agli elementi .katex con attributo overflow-x

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header {
 
 .contenuti, .katex {
     overflow-x: auto;
+    overflow-y: hidden; /* Altrimenti compare la scrollbar verticale */
 }
   
 table, .katex-display {
